<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_blue_linear"
    tools:context=".sign.signup.DaftarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_word" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_masuk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_daftar"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_line"
            android:drawableRight="@drawable/ic_line"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/sudah_punya_akun"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_daftar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_daftar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/ic_masuk"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="@string/daftar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/till_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_tinggi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            app:endIconMode="clear_text"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_light"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_umur" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tinggi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_white"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="start|center"
                android:hint="@string/masukan_tinggi"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/customColorHint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_umur"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            app:endIconMode="clear_text"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_light"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_jenis_kelamin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_umur"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_white"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="start|center"
                android:hint="@string/masukan_umur"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/customColorHint"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="125px"
            android:layout_marginEnd="50dp"
            app:endIconMode="clear_text"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_light"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_white"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="start|center"
                android:hint="@string/masukan_nama"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/customColorHint"
                android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_berat_badan"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            app:endIconMode="clear_text"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_light"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_tinggi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_berat_badan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_white"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="start|center"
                android:hint="@string/masukan_berat_badan"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/customColorHint"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_jenis_kelamin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/ic_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_nama">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edt_jenis_kelamin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="start|center"
                android:inputType="none"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/masukan_jenis_kelamin"
                android:textColor="@color/customColorHint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            app:endIconMode="clear_text"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_light"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_berat_badan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_white"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="start|center"
                android:hint="@string/masukan_username"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/customColorHint"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            app:endIconMode="clear_text"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_light"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_white"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="start|center"
                android:hint="@string/masukan_email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/customColorHint"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/till_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            app:endIconMode="password_toggle"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_white"
                android:fontFamily="@font/nunito_bold"
                android:gravity="start|center"
                android:hint="@string/masukan_password"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/customColorHint"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>